# filament-calibrator

./: .gitignore  CLAUDE.md  FilamentCalibrator.spec  QUICKSTART.md  README.md  filament-calibrator.example.toml  launcher.py  pyproject.toml
.claude/: session-context.md
.github/workflows/: build.yml  publish.yml  test.yml
docs/: configuration.md  extrusion-multiplier.md  generate_images.py  gui.md  installation.md  pressure-advance.md  retraction-test.md  shrinkage.md  temperature-tower.md  volumetric-flow.md
pyinstaller/: filament-calibrator.spec  gui_entry.py
src/filament_calibrator/: __init__.py  __main__.py  _cq_compat.py  bridge_cli.py  cli.py  config.py  cooling_cli.py  cooling_insert.py  em_cli.py  em_model.py  flow_cli.py  flow_insert.py  flow_model.py  gui.py  i18n.py  ini_parser.py  ini_writer.py  model.py  overhang_cli.py  overhang_model.py  pa_cli.py  pa_insert.py  pa_model.py  pa_pattern.py  printer_gcode.py  retraction_cli.py  retraction_insert.py  retraction_model.py  retraction_speed_cli.py  retraction_speed_insert.py  shrinkage_cli.py  shrinkage_model.py  slicer.py  tempinsert.py  thumbnail.py  tolerance_cli.py
src/filament_calibrator/locale/de/LC_MESSAGES/: filament_calibrator.mo  filament_calibrator.po
tests/: conftest.py  test_cli.py  test_config.py  test_cooling_cli.py  test_cooling_insert.py  test_em_cli.py  test_em_model.py  test_flow_cli.py  test_flow_insert.py  test_flow_model.py  test_gui.py  test_ini_parser.py  test_ini_writer.py  test_model.py  test_overhang_model.py  test_pa_cli.py  test_pa_insert.py  test_pa_model.py  test_pa_pattern.py  test_printer_gcode.py  test_retraction_cli.py  test_retraction_insert.py  test_retraction_model.py  test_retraction_speed_cli.py  test_retraction_speed_insert.py  test_shrinkage_cli.py  test_shrinkage_model.py  test_slicer.py  test_tempinsert.py  test_thumbnail.py
