[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "filament-calibrator"
version = "0.1.0"
description = "Automated filament temperature tower calibration for Prusa 3D printers"
readme = "README.md"
license = "GPL-3.0-only"
authors = [
    { name = "Hyiger" },
]
requires-python = ">=3.10"
dependencies = [
    "cadquery>=2.4",
    "gcode-lib>=1.1.4",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
gui = [
    "streamlit>=1.28",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
]

[project.scripts]
temperature-tower = "filament_calibrator.cli:main"
extrusion-multiplier = "filament_calibrator.em_cli:main"
volumetric-flow = "filament_calibrator.flow_cli:main"
pressure-advance = "filament_calibrator.pa_cli:main"
retraction-test = "filament_calibrator.retraction_cli:main"
shrinkage-test = "filament_calibrator.shrinkage_cli:main"
filament-calibrator-gui = "filament_calibrator.gui:main"

[tool.hatch.build.targets.wheel]
packages = ["src/filament_calibrator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
