[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "filament-calibrator"
version = "0.2.2"
description = "CLI tool suite for 3D printer filament calibration — temperature tower, extrusion multiplier, volumetric flow, pressure advance, retraction, and shrinkage tests"
readme = "README.md"
license = "GPL-3.0-only"
authors = [
    { name = "Hyiger" },
]
requires-python = ">=3.10"
keywords = [
    "3d-printing",
    "filament",
    "calibration",
    "prusaslicer",
    "temperature-tower",
    "pressure-advance",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "cadquery>=2.4",
    "gcode-lib>=1.1.4",
    "tomli>=2.0; python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/hyiger/filament-calibrator"
Repository = "https://github.com/hyiger/filament-calibrator"
Issues = "https://github.com/hyiger/filament-calibrator/issues"
Documentation = "https://github.com/hyiger/filament-calibrator/tree/main/docs"

[project.optional-dependencies]
gui = [
    "streamlit>=1.28",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
]

[project.scripts]
temperature-tower = "filament_calibrator.cli:main"
extrusion-multiplier = "filament_calibrator.em_cli:main"
volumetric-flow = "filament_calibrator.flow_cli:main"
pressure-advance = "filament_calibrator.pa_cli:main"
retraction-test = "filament_calibrator.retraction_cli:main"
shrinkage-test = "filament_calibrator.shrinkage_cli:main"
filament-calibrator-gui = "filament_calibrator.gui:main"

[tool.hatch.build.targets.wheel]
packages = ["src/filament_calibrator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
